# Fe-aging

./: .gitignore  CIRI铁衰老中药单体ML筛选_详细路线.md  CODE_WIKI.md  GLOBAL_RULES.md  INSTALLATION_REPORT.md  P4_CPI_model_plan.md  README.md  check_data_integrity.py  check_shapes.py  check_slides.py  count_v6_temp.py  count_v7_final.py  count_v9_sections.js  count_words.js  count_words.py  count_words_v2.py  debug.py  embed_questions.py  extract_pdfs.py  extract_umap.R  fix_data_quality.py  gen_doc_utils.py  gen_utils.py  generate_exam.js  generate_exam_outline.py  generate_final_proposal_v13.js  generate_proposal.js  generate_proposal_v3.js  generate_proposal_v4_final.js  generate_proposal_v5_nsf_standard.js  generate_proposal_v6_nsf_enhanced.js  generate_proposal_v7_final_nsf.js  generate_proposal_v8_revised_nsf.js  generate_proposal_v9_polished.js  insert_pseudotime_method.py  inspect_docx.py  manifest.json  monitor_v24.py  parse_all.py  parse_bank.js  (+48 more)
L1/: build_gse233815_bulk_matrix.py  (+10 more)
L4/: .dockerignore  AGENTS.md  Dockerfile  P4_logical_optimization_plan.md  README.md  docker-compose.yml  environment.yml  mlflow_setup.py  pyproject.toml  pytest.ini  requirements.txt
L4/.dvc/: .gitignore  config  data_tracking.dvc
L4/configs/: default.yaml  default_v28_backup.yaml  default_v30.yaml  evaluation.yaml  hyperparam_search.yaml  loader.yaml  model.yaml  prediction.yaml
L4/docs/: CODE_EDITING_TOOLS.md  cpi_accuracy_optimization_report_v50.md  cpi_dti_gnn_optimization_feasibility_assessment.md  cpi_dti_gnn_optimization_research_report_v2.md  domain_adaptation_design.md  v24_quality_audit.md
L4/entry/: benchmark_external.py  build_graph.py  diagnose_hgt.py  evaluate.py  predict.py  run_pipeline.py  train.py
L4/reports/: weighting_method_evaluation_report.docx  weighting_method_evaluation_report.md
L4/results/: drugbank_active_compounds.csv  experimental_actives_report.md  experimental_actives_summary.csv  model_performance.csv  phase4_report.md  tcm_top_candidates.csv  training_metrics.json
L4/results_v10_minibatch/: model_performance_v18.csv  tcm_predictions_full_v18.csv  tcm_top_candidates_v18.csv  zhuangyao_top500_literature_adjusted.csv
L4/results_v4/: enrichment_analysis.csv  model_performance.csv  phase4_report.md  tcm_top_candidates.csv  training_metrics.json
L4/results_v4_5/: enrichment_analysis_v4_5.csv  model_performance_v4_5.csv  phase4_report_v4_5.md  tcm_top_candidates_v4_5.csv  training_metrics_v4_5.json
L4/results_v5/: comparison_report_v4_5_vs_v5.md  comparison_summary_v4_5_vs_v5.json  enrichment_analysis_v5.csv  model_performance_v5.csv  phase4_report_v5.md  tcm_predictions_full_v5.csv  tcm_top_candidates_v5.csv  training_metrics_v5.json
L4/results_v6/: model_performance_v6.csv  phase4_report_v6.md  tcm_predictions_full_v6.csv  tcm_top_candidates_v6.csv  training_metrics_v6.json
L4/results_v6_toxfiltered/: model_performance_v6_tox.csv  phase4_report_v6_tox.md  self_check_report_v6_tox.json  tcm_predictions_full_v6_tox.csv  tcm_top_candidates_v6_tox.csv  training_metrics_v6_tox.json
L4/runs/: environment_fingerprint.json  environment_fingerprint.txt
L4/scripts/: ablation_study.py  ablation_study_v28.py  ablation_study_v28_original.py  add_bcp_to_pool.py  audit_aiye.py  audit_aiye_deep.py  audit_aiye_final.py  audit_wuhuanzi.py  bowler_rename.py  build_rat_human_ortholog_mygene.py  check_active_data.py  check_adjusted_rankings.py  check_aiye_in_zhuangyao.py  check_bata_caryophyllene.py  check_combined_cpi.py  check_herb_source.py  check_nodes.py  check_pool_caryophyllene.py  check_pool_columns.py  check_target_scores.py  clean_cpi_data.py  collect_experimental_actives.py  compare_v4_5_v5.py  complementarity_analysis.py  convert_residue_pt_to_memmap.py  crossref_bindingdb_github.py  crossref_cpiextract_data.py  crossref_ljafari_dti.py  data_audit.py  data_audit_v25.py  data_supplement_v25.py  debug_bedroc_formulas.py  deep_audit_predictions.py  diagnose_gene_filter.py  diagnose_sage_prot_cold.py  dify_setup.py  esm2_mlp_baseline.py  expand_disease_node_gse61616.py  extract_640d_from_1920d_cache.py  extract_lactb_bindingdb.py  (+76 more)
L4/src/iron_aging_gnn/: __init__.py
L4/src/iron_aging_gnn/data/: __init__.py  constants.py  features.py  loader.py  retrieval.py  self_check.py
L4/src/iron_aging_gnn/evaluation/: __init__.py  cold_start.py  metrics.py  validation_protocol.py
L4/src/iron_aging_gnn/graph/: __init__.py  build.py  esm_similarity_negative_sampling.py  meta_path.py  pyg_loaders.py  sampling.py  split.py  topology_negative_sampling.py  validation_graphs.py
L4/src/iron_aging_gnn/interpretation/: __init__.py  explanation_pipeline.py  iron_aging_overlap.py  pathway_analysis.py
L4/src/iron_aging_gnn/models/: __init__.py  conditioned_modulation.py  decoders.py  ensemble_fusion.py  graph_transformer.py  hgt.py  losses.py  memory_bank.py  rgcn.py  sage.py  semantic_attention.py  simplehgn.py
L4/src/iron_aging_gnn/models/encoders/: __init__.py  molecular_encoder.py
L4/src/iron_aging_gnn/pipeline/: __init__.py  prediction.py  utils.py  validation.py
L4/src/iron_aging_gnn/prediction/: __init__.py  predictor.py
L4/src/iron_aging_gnn/training/: __init__.py  hyperparameter_search.py  trainer.py  trainer_bowler_test.py  trainer_test_backup.py  training_components.py  training_config.py
L4/src/iron_aging_gnn/utils/: __init__.py  config.py  device.py  logging.py  reproducibility.py  seed.py
L4/tests/: conftest.py  test_decoders.py  test_evaluation.py  test_graph.py  test_integration.py  test_losses.py  test_memory_bank.py  test_models.py  test_seed_reproducibility.py  test_utils.py
(+331 files in other folders)
