[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-aging-gnn"
version = "2.1.0"
description = "铁衰老药物靶标预测：拓扑-语义双分支图神经网络与严格蛋白冷启动评估"
readme = "CODE_WIKI.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "铁衰老研究团队"},
]
keywords = [
    "drug-target interaction",
    "graph neural networks",
    "ferroptosis",
    "iron aging",
    "traditional chinese medicine",
    "HGT",
    "GraphSAGE",
    "ESM-2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "rdkit>=2023.03.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "transformers>=4.30.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/iron-aging/iron-aging-gnn"
Repository = "https://github.com/iron-aging/iron-aging-gnn"
Issues = "https://github.com/iron-aging/iron-aging-gnn/issues"

[tool.setuptools.packages.find]
where = ["L4/src"]
include = ["iron_aging_gnn*"]

[tool.setuptools.package-data]
"iron_aging_gnn" = ["configs/*.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "L3/TCMSP-Spider",
    "L4/papers",
    "L4/results*",
    "L4/logs",
    "L1/results",
    "L2/results",
    "L3/results",
    "__pycache__",
    "*.egg-info",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D205",  # 项目使用中文标题+下划线分隔的 docstring 风格
    "D212",  # 同上
    "D213",  # Multi-line docstring summary should start at the second line
    "D415",  # 中文 docstring 以。结尾，Ruff 无法识别
    "N812",  # `import torch.nn.functional as F` 为 PyTorch 社区惯例
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "L4/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "L3/TCMSP-Spider",
    "L4/papers",
    "L4/scripts",
]
